<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/nav_control"
        android:icon="@drawable/ic_control"
        android:title="@string/control" />
    <item
        android:id="@+id/nav_sms_calls"
        android:icon="@drawable/ic_sms"
        android:title="@string/sms_calls" />
    <item
        android:id="@+id/nav_files"
        android:icon="@drawable/ic_files"
        android:title="@string/files" />
    <item
        android:id="@+id/nav_social"
        android:icon="@drawable/ic_social"
        android:title="@string/social" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>
